--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,11 @@
   <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   <title>Assignment - L0</title>
   <script type="module" src="./js/index.js"></script>
-  <script type="module" src="./js/components/lm-hello-app/index.js"></script>
 </head>
 
 <body>
   <main>
-    <lm-hello-app></lm-hello-app>
+    <lm-data id=dataModule></lm-data>
   </main>
 </body>
 
