Finish the test-app and test report

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   <title>Assignment - L1</title>
   <script type="module" src="./js/index.js"></script>
+  <script type="module" src="./js/components/test-app/index.js"></script>
 </head>
 
 <body>
   <main>
     <lm-data id=dataModule></lm-data>
+    <test-app></test-app>
   </main>
 </body>
 
