Work with tables

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <main>
-    <lm-data id=dataModule></lm-data>
+    <lm-data id=statistics></lm-data>
     <test-app></test-app>
   </main>
 </body>
