Start working with the app component

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,14 @@
   <title>Assignment - L1</title>
   <script type="module" src="./js/index.js"></script>
   <script type="module" src="./js/components/test-app/index.js"></script>
+  <script type="module" src="./js/components/statistics/index.js"></script>
 </head>
 
 <body>
   <main>
-    <lm-data id=statistics></lm-data>
+    <statistics></statistics>
     <test-app></test-app>
+    <statistics-app></statistics-app>
   </main>
 </body>
 
