--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
   <title>Assignment - L1</title>
   <script type="module" src="./js/index.js"></script>
   <script type="module" src="./js/components/test-app/index.js"></script>
-  <script type="module" src="./js/components/statistics/index.js"></script>
+  <script type="module" src="./js/components/descriptive-statistics/index.js"></script>
+  <script type="module" src="./js/components/statistics-app/index.js"></script>
 </head>
 
 <body>
   <main>
-    <statistics></statistics>
+    <descriptive-statistics></descriptive-statistics>
     <test-app></test-app>
     <statistics-app></statistics-app>
   </main>
